--- a/templates/document/show.html.twig
+++ b/templates/document/show.html.twig
@@ -8,8 +8,30 @@
 	<div class="container my-5 d-flex justify-content-between">
 		<div class="mx-auto w-75">
 			<iframe src="{{ asset('uploads/documents/' ~ document.file) }}#toolbar=0" width="70%" height="700px"></iframe>
+			{% if suggestions is not empty %}
+				<div class="suggestions d-flex justify-content-evenly">
+					{% for suggestion in suggestions %}
+						<a href="{{ path('document_show', {'slug': document.slug}) }}">
+							<div class="col document" data-rating="{{document.ratingAverage}}">
+								<div class="p-3 border bg-light">
+									<h2 class="text-center">{{ document.title }}</h2>
+									<div class="mx-auto text-center">
+										proposé le
+										{{ document.uploadedAt | format_datetime('short', 'none', locale='fr') }}
+										par
+										{{ document.author.username }}
+									</div>
+									<div class="mx-auto text-center">
+										{% include 'partials/_rating.html.twig' %}
+										{{ document.ratingAverage }}
+									</div>
 
-			{# <embed src="{{ asset('uploads/documents/' ~ document.file) }}" width="100%" height="1000" type="application/pdf"/> #}
+								</div>
+							</div>
+						</a>
+					{% endfor %}
+				</div>
+			{% endif %}
 		</div>
 		<div>
 			{% if document in app.user.downloadedDocuments %}
@@ -79,14 +101,35 @@
 			</h3>
 
 			{% for comment in document.comments %}
-				{{ comment.author.username }}
-				{{ comment.rating }}
-				{{ comment.content }}
+				<div class="card my-3">
+					<div class="card-body">
+						{% for i in 1..5 %}
+							{% if i <= comment.rating %}
+								<i class="fas fa-star"></i>
+							{% else %}
+								<i class="far fa-star"></i>
+							{% endif %}
+						{% endfor %}
+						<h2 class="card-title">{{ comment.author.username }}</h2>
+						<h3 class="card-subtitle mb-2 text-body-secondary fs-6">le
+							{{ comment.createdAt |format_datetime('short', 'none', locale='fr') }}
+							à
+							{{ comment.createdAt |format_datetime('none', 'short', locale='fr') }}
+						</h3>
+						<p class="card-text">{{ comment.content }}</p>
+					</div>
+				</div>
+
 
 			{% endfor %}
 
 			{% if app.user %}
-				<a href="{{ path('comment_add', {'slug': document.slug}) }}" class="btn btn-lg btn-primary">Ajouter un commentaire</a>
+				<div class="text-center">
+					<a href="{{ path('comment_add', {'slug': document.slug}) }}" class="btn btn-primary">
+						<i class="fa-duotone fa-comment-plus me-2"></i>
+						Ajouter un commentaire
+					</a>
+				</div>
 			{% endif %}
 
 		</div>
