--- a/templates/document/search.html.twig
+++ b/templates/document/search.html.twig
@@ -7,8 +7,11 @@
 		<h1 class="page-title">Rechercher un document</h1>
 
 		{{ form_start(form) }}
-		{{ form_row(form.type, {'attr': {'class': 'd-flex gap-5'}}) }}
+		{# {{ form_row(form.types, {'attr': {'class': 'd-flex gap-5'}}) }} #}
 		<div class="row">
+			<div class="col">
+				{{ form_row(form.type) }}
+			</div>
 			<div class="col">
 				{{ form_row(form.level)}}
 			</div>
@@ -22,10 +25,67 @@
 		<div class="mb-3">
 			{{ form_widget(form.title)}}
 		</div>
-		<div class="d-flex flex-column align-items-center">
-			<button type="submit" class="btn btn-lg btn-primary">Rechercher un document</button>
+
+
+		<div class="bar w-75 mx-auto my-3"></div>
+
+		<div id="filters" class="w-100 d-flex justify-content-between align-items-center gap-3">
+			<div>Note minimale :
+				{% for i in 1..5 %}
+					<i class="far fa-star rating-filter" id="minimal-rating-{{i}}"></i>
+				{% endfor %}
+			</div>
+			{{ form_widget(form.orderBy)}}
 		</div>
 		{{ form_end(form) }}
+
+		<div id="results" class="container overflow-hidden my-3">
+
+			<div class="row row-cols-2 g-3" id="document_results">
+
+				{% for document in documents %}
+					<div class="col document" data-rating="{{document.ratingAverage}}">
+						<div class="p-3 border bg-light">
+							<div class="d-flex justify-content-between">
+								<a href="{{ path('document_search', {type: document.type.id }) }}" class="badge text-bg-primary">{{ document.type.name }}</a>
+								<div id="levels">
+									{% for level in document.levels %}
+										<a href="{{ path('document_search', {level: level.id }) }}" class="badge text-bg-success mx-1">{{ level.name }}</a>
+									{% endfor %}
+								</div>
+							</div>
+
+							<div class="content">
+								<h2 class="text-center">
+									<a href="{{ path('document_show', {'slug': document.slug}) }}">{{ document.title }}</a>
+								</h2>
+								<div class="mx-auto text-center">
+									proposé le
+									{{ document.uploadedAt | format_datetime('short', 'none', locale='fr') }}
+									par
+									<a href="{{ path('document_search', {'author': document.author.id}) }}">{{ document.author.username }}</a>
+								</div>
+								<div class="mx-auto text-center">
+									{% include 'partials/_rating.html.twig' %}
+									{{ document.ratingAverage }}
+								</div>
+							</div>
+						</div>
+					</div>
+				{% endfor %}
+			</div>
+		</div>
+		<nav>
+			<ul class="pagination justify-content-center">
+				<li class="page-item {% if previous < 0 %} disabled {% endif %}">
+					<a href="{{ path('document_search', { offset: previous }) }}" class="page-link">Précédent</a>
+				</li>
+				<li class="page-item {% if next >= documents|length %} disabled {% endif %}">
+					<a href="{{ path('document_search', { offset: next }) }}" class="page-link">Suivant</a>
+				</li>
+			</ul>
+		</nav>
+
 
 	</div>
 {% endblock %}
