--- a/templates/document/search.html.twig
+++ b/templates/document/search.html.twig
@@ -6,7 +6,7 @@
 	<div class="container my-5">
 		<h1 class="page-title">Rechercher un document</h1>
 
-		{{ form_start(form) }}
+		{{ form_start(form, {'attr': {'id': 'form_filter_documents'}}) }}
 		{# {{ form_row(form.types, {'attr': {'class': 'd-flex gap-5'}}) }} #}
 		<div class="row">
 			<div class="col">
@@ -29,13 +29,32 @@
 
 		<div class="bar w-75 mx-auto my-3"></div>
 
-		<div id="filters" class="w-100 d-flex justify-content-between align-items-center gap-3">
-			<div>Note minimale :
-				{% for i in 1..5 %}
-					<i class="far fa-star rating-filter" id="minimal-rating-{{i}}"></i>
-				{% endfor %}
+		{# <div id="filters" class="w-100 d-flex justify-content-between align-items-center gap-3"> #}
+		<div id="filters" class="row gap-3">
+			<div class="col d-flex flex-column align-items-center">
+				{{ form_label(form.ratingAverage)}}
+				<div id="{{ field_name(form.ratingAverage) }}" class="d-flex justify-content-center" onchange="this.closest('form').submit()">
+					{% for value in field_choices(form.ratingAverage) %}
+						<div class="form-check">
+							<input type="radio" id="ratingAverage_{{ loop.index0 }}" name="ratingAverage" class="form-check-input d-none" value="{{ value }}" {% if value == field_value(form.ratingAverage) %} checked {% endif %}>
+							<label class="form-check-label" for="ratingAverage_{{ loop.index0 }}" data-rating="{{ value }}">
+								<i class="far fa-star rating-filter"></i>
+							</label>
+						</div>
+					{% endfor %}
+				</div>
 			</div>
-			{{ form_widget(form.orderBy)}}
+			<div class="col">
+				{{ form_row(form.orderBy)}}
+			</div>
+			{% if app.request.request is not empty %}
+				<div class="col d-flex align-items-center justify-content-end">
+					<a href="{{ path('document_search') }}" class="btn btn-warning">
+						<i class="fa-duotone fa-eraser me-2"></i>
+						Effacer tous les filtres
+					</a>
+				</div>
+			{% endif %}
 		</div>
 		{{ form_end(form) }}
 
@@ -45,29 +64,39 @@
 
 				{% for document in documents %}
 					<div class="col document" data-rating="{{document.ratingAverage}}">
-						<div class="p-3 border bg-light">
-							<div class="d-flex justify-content-between">
-								<a href="{{ path('document_search', {type: document.type.id }) }}" class="badge text-bg-primary">{{ document.type.name }}</a>
-								<div id="levels">
-									{% for level in document.levels %}
-										<a href="{{ path('document_search', {level: level.id }) }}" class="badge text-bg-success mx-1">{{ level.name }}</a>
-									{% endfor %}
-								</div>
+						<div class="card">
+							<div class="card-header">
+								<a href=" {{ path('document_search', {type: document.type.id } ) }}">{{ document.type.name }}</a>
 							</div>
+							<div class="card-body">
+								<div class="d-flex justify-content-between">
+									<div id="subjects" class="text-start">
+										{% for subject in document.subjects %}
 
-							<div class="content">
-								<h2 class="text-center">
-									<a href="{{ path('document_show', {'slug': document.slug}) }}">{{ document.title }}</a>
-								</h2>
-								<div class="mx-auto text-center">
-									proposé le
-									{{ document.uploadedAt | format_datetime('short', 'none', locale='fr') }}
-									par
-									<a href="{{ path('document_search', {'author': document.author.id}) }}">{{ document.author.username }}</a>
+											<a href="{{ path('document_search', {subject: subject.id }) }}" class="badge text-bg-danger mx-1">{{ subject.name }}</a>
+										{% endfor %}
+									</div>
+									<div id="levels">
+										{% for level in document.levels %}
+											<a href="{{ path('document_search', {level: level.id }) }}" class="badge text-bg-success mx-1">{{ level.name }}</a>
+										{% endfor %}
+									</div>
 								</div>
-								<div class="mx-auto text-center">
-									{% include 'partials/_rating.html.twig' %}
-									{{ document.ratingAverage }}
+
+								<div class="content">
+									<div class="mx-auto text-center">
+										{% include 'partials/_rating.html.twig' %}
+										{{ document.ratingAverage }}
+									</div>
+									<h2 class="text-center">
+										<a href="{{ path('document_show', {'slug': document.slug}) }}">{{ document.title }}</a>
+									</h2>
+									<div class="mx-auto text-center">
+										proposé le
+										{{ document.uploadedAt | format_datetime('short', 'none', locale='fr') }}
+										par
+										<a href="{{ path('document_search', {'author': document.author.id}) }}">{{ document.author.username }}</a>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -85,7 +114,5 @@
 				</li>
 			</ul>
 		</nav>
-
-
 	</div>
 {% endblock %}
