--- a/templates/document/search.html.twig
+++ b/templates/document/search.html.twig
@@ -7,7 +7,6 @@
 		<h1 class="page-title">Rechercher un document</h1>
 
 		{{ form_start(form, {'attr': {'id': 'form_filter_documents'}}) }}
-		{# {{ form_row(form.types, {'attr': {'class': 'd-flex gap-5'}}) }} #}
 		<div class="row">
 			<div class="col">
 				{{ form_row(form.type) }}
@@ -47,7 +46,7 @@
 			<div class="col">
 				{{ form_row(form.orderBy)}}
 			</div>
-			{% if app.request.request is not empty %}
+			{% if app.request.query is not empty and app.request.query | length > 1 %}
 				<div class="col d-flex align-items-center justify-content-end">
 					<a href="{{ path('document_search') }}" class="btn btn-warning">
 						<i class="fa-duotone fa-eraser me-2"></i>
@@ -60,46 +59,11 @@
 
 		<div id="results" class="container overflow-hidden my-3">
 
-			<div class="row row-cols-2 g-3" id="document_results">
+			<div class="row row-cols-3 g-3" id="document_results">
 
 				{% for document in documents %}
 					<div class="col document" data-rating="{{document.ratingAverage}}">
-						<div class="card">
-							<div class="card-header">
-								<a href=" {{ path('document_search', {type: document.type.id } ) }}">{{ document.type.name }}</a>
-							</div>
-							<div class="card-body">
-								<div class="d-flex justify-content-between">
-									<div id="subjects" class="text-start">
-										{% for subject in document.subjects %}
-
-											<a href="{{ path('document_search', {subject: subject.id }) }}" class="badge text-bg-danger mx-1">{{ subject.name }}</a>
-										{% endfor %}
-									</div>
-									<div id="levels">
-										{% for level in document.levels %}
-											<a href="{{ path('document_search', {level: level.id }) }}" class="badge text-bg-success mx-1">{{ level.name }}</a>
-										{% endfor %}
-									</div>
-								</div>
-
-								<div class="content">
-									<div class="mx-auto text-center">
-										{% include 'partials/_rating.html.twig' %}
-										{{ document.ratingAverage }}
-									</div>
-									<h2 class="text-center">
-										<a href="{{ path('document_show', {'slug': document.slug}) }}">{{ document.title }}</a>
-									</h2>
-									<div class="mx-auto text-center">
-										proposé le
-										{{ document.uploadedAt | format_datetime('short', 'none', locale='fr') }}
-										par
-										<a href="{{ path('document_search', {'author': document.author.id}) }}">{{ document.author.username }}</a>
-									</div>
-								</div>
-							</div>
-						</div>
+						{% include 'partials/_document.html.twig' %}
 					</div>
 				{% endfor %}
 			</div>
