--- a/templates/document/show.html.twig
+++ b/templates/document/show.html.twig
@@ -5,157 +5,132 @@
 {% endblock %}
 
 {% block body %}
-	<div class="container my-5 d-flex justify-content-between">
-		<div class="mx-auto w-75">
-			<iframe src="{{ asset('uploads/documents/' ~ document.file) }}#toolbar=0" width="70%" height="700px"></iframe>
-			{% if suggestions is not empty %}
-				<div class="suggestions d-flex justify-content-evenly">
-					{% for suggestion in suggestions %}
-						<a href="{{ path('document_show', {'slug': suggestion.slug}) }}">
-							<div class="col document" data-rating="{{suggestion.ratingAverage}}">
-								<div class="p-3 border bg-light">
-									<h2 class="text-center">{{ suggestion.title }}</h2>
-									<div class="mx-auto text-center">
-										proposé le
-										{{ suggestion.uploadedAt | format_datetime('short', 'none', locale='fr') }}
-										par
-										{{ suggestion.author.username }}
-									</div>
-									<div class="mx-auto text-center">
-										{% include 'partials/_rating.html.twig' with {'document': suggestion} %}
-										{{ suggestion.ratingAverage }}
-									</div>
+	<div class="container my-5">
+		<div class="row gap-3">
+			<div class="col">
+				<iframe src="{{ asset('uploads/documents/' ~ document.file) }}#toolbar=0" width="100%" height="700px"></iframe>
+			</div>
+			<div class="col">
+				{% if app.user and document in app.user.downloadedDocuments %}
+					<div class="alert alert-info alert-dismissible fade show" role="alert">
+						<strong>Petite info:
+						</strong>
+						Vous avez déjà téléchargé ce document.
+						<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+					</div>
+				{% endif %}
+				<div class="mx-auto text-center d-flex justify-content-center gap-3">
+					<div class="rating">
+						{% include 'partials/_rating.html.twig' %}
+						{{ document.ratingAverage }}
+					</div>
+					<div class="downloads">
+						<i class="fa-duotone fa-download mx-2"></i>
+						<span id="downloadsNumber">{{ document.downloadsNumber }}</span>
+					</div>
+					<div class="favorites">
+						<i class="fa-duotone fa-bookmark mx-2"></i>
+						<span id="downloadsNumber">{{ document.favoriteUsers|length }}</span>
+					</div>
+				</div>
+				<h1 class="page-title">{{ document.title }}</h1>
+				<div class="mx-auto text-center">
+					proposé le
+					{{ document.uploadedAt | format_datetime('short', 'none', locale='fr') }}
+					par
+					{{ document.author.username }}
+				</div>
 
-								</div>
-							</div>
+				<div class="my-3">
+					{{ document.description }}
+				</div>
+
+				<div class="mx-auto text-center d-flex justify-content-center gap-3 py-3">
+					<div>
+						<a href="{{ asset('uploads/documents/' ~ document.file) }}" class="btn btn-sm btn-primary" id="downloadButton" data-id="{{ document.id }}" download="{{ document.slug }}">
+							<i class="fa-duotone fa-download me-2"></i>
+							Télécharger le document
 						</a>
+					</div>
+					{% if document.author != app.user and app.user %}
+						{% if app.user in document.favoriteUsers %}
+							<div>
+								<a class="btn btn-sm btn-danger" href="{{ path('user_documents_remove_favorite', {id: document.id}) }}">
+									<i class="fa-duotone fa-bookmark-slash me-2"></i>
+									Retirer des favoris
+								</a>
+							</div>
+						{% else %}
+							<div>
+								<a class="btn btn-sm btn-success" href="{{ path('user_documents_add_favorite', {id: document.id}) }}">
+									<i class="fa-duotone fa-bookmark me-2"></i>
+									Ajouter aux favoris
+								</a>
+							</div>
+						{% endif %}
+					{% endif %}
+				</div>
+				{% if suggestions is not empty %}
+					<h2>Ces documents pourraient vous intéresser :
+					</h2>
+					<div class="row row-cols-3 g-3">
+						{% for suggestion in suggestions %}
+							{% include 'partials/_document.html.twig' with {'document': suggestion} %}
+						{% endfor %}
+					</div>
+				{% endif %}
+				<h2>Du même auteur :
+				</h2>
+				<div class="row row-cols-2 g-3">
+					{% for document in sameAuthorDocuments %}
+						{% include 'partials/_document.html.twig' %}
 					{% endfor %}
 				</div>
+			</div>
+		</div>
+		<h3>
+			{% if document.comments | length == 0 %}
+				Aucun commentaire
+			{% elseif document.comments | length == 1 %}
+				{{ document.comments | length }}
+				commentaire
+			{% else %}
+				{{ document.comments | length }}
+				commentaires
 			{% endif %}
-			{% for document in sameAuthorDocuments %}
-				<a href="{{ path('document_show', {'slug': document.slug}) }}">
-					<div class="col document" data-rating="{{document.ratingAverage}}">
-						<div class="p-3 border bg-light">
-							<h2 class="text-center">{{ document.title }}</h2>
-							<div class="mx-auto text-center">
-								proposé le
-								{{ document.uploadedAt | format_datetime('short', 'none', locale='fr') }}
-								par
-								{{ document.author.username }}
-							</div>
-							<div class="mx-auto text-center">
-								{% include 'partials/_rating.html.twig'%}
-								{{ document.ratingAverage }}
-							</div>
+		</h3>
 
-						</div>
-					</div>
+		{% for comment in document.comments %}
+			<div class="card my-3">
+				<div class="card-body">
+					{% for i in 1..5 %}
+						{% if i <= comment.rating %}
+							<i class="fas fa-star"></i>
+						{% else %}
+							<i class="far fa-star"></i>
+						{% endif %}
+					{% endfor %}
+					<h2 class="card-title">{{ comment.author.username }}</h2>
+					<h3 class="card-subtitle mb-2 text-body-secondary fs-6">le
+						{{ comment.createdAt |format_datetime('short', 'none', locale='fr') }}
+						à
+						{{ comment.createdAt |format_datetime('none', 'short', locale='fr') }}
+					</h3>
+					<p class="card-text">{{ comment.content }}</p>
+				</div>
+			</div>
+
+
+		{% endfor %}
+
+		{% if app.user %}
+			<div class="text-center">
+				<a href="{{ path('comment_add', {'slug': document.slug}) }}" class="btn btn-primary">
+					<i class="fa-duotone fa-comment-plus me-2"></i>
+					Ajouter un commentaire
 				</a>
-			{% endfor %}
-		</div>
-		<div>
-			{% if app.user and document in app.user.downloadedDocuments %}
-				<div class="alert alert-info alert-dismissible fade show" role="alert">
-					<strong>Petite info:
-					</strong>
-					Vous avez déjà téléchargé ce document.
-					<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-				</div>
-			{% endif %}
-			<h1 class="page-title">{{ document.title }}</h1>
-			<div class="mx-auto text-center">
-				proposé le
-				{{ document.uploadedAt | format_datetime('short', 'none', locale='fr') }}
-				par
-				{{ document.author.username }}
 			</div>
-
-			<div class="mx-auto text-center d-flex justify-content-center gap-3">
-				<div class="rating">
-					{% include 'partials/_rating.html.twig' %}
-					{{ document.ratingAverage }}
-				</div>
-				<div class="downloads">
-					<i class="fa-duotone fa-download mx-2"></i>
-					<span id="downloadsNumber">{{ document.downloadsNumber }}</span>
-				</div>
-				<div class="favorites">
-					<i class="fa-duotone fa-bookmark mx-2"></i>
-					<span id="downloadsNumber">{{ document.favoriteUsers|length }}</span>
-				</div>
-			</div>
-
-			<div class="mx-auto text-center d-flex justify-content-center gap-3 py-3">
-				<div>
-					<a href="{{ asset('uploads/documents/' ~ document.file) }}" class="btn btn-sm btn-primary" id="downloadButton" data-id="{{ document.id }}" download="{{ document.slug }}">
-						<i class="fa-duotone fa-download me-2"></i>
-						Télécharger le document
-					</a>
-				</div>
-				{% if document.author != app.user %}
-					{% if app.user in document.favoriteUsers %}
-						<div>
-							<a class="btn btn-sm btn-danger" href="{{ path('user_documents_remove_favorite', {id: document.id}) }}">
-								<i class="fa-duotone fa-bookmark-slash me-2"></i>
-								Retirer des favoris
-							</a>
-						</div>
-					{% else %}
-						<div>
-							<a class="btn btn-sm btn-success" href="{{ path('user_documents_add_favorite', {id: document.id}) }}">
-								<i class="fa-duotone fa-bookmark me-2"></i>
-								Ajouter aux favoris
-							</a>
-						</div>
-					{% endif %}
-				{% endif %}
-			</div>
-
-			<h3>
-				{% if document.comments | length == 0 %}
-					Aucun commentaire
-				{% else if document.comments | length == 1 %}
-					{{ document.comments | length }}
-					commentaire
-				{% else %}
-					{{ document.comments | length }}
-					commentaires
-				{% endif %}
-			</h3>
-
-			{% for comment in document.comments %}
-				<div class="card my-3">
-					<div class="card-body">
-						{% for i in 1..5 %}
-							{% if i <= comment.rating %}
-								<i class="fas fa-star"></i>
-							{% else %}
-								<i class="far fa-star"></i>
-							{% endif %}
-						{% endfor %}
-						<h2 class="card-title">{{ comment.author.username }}</h2>
-						<h3 class="card-subtitle mb-2 text-body-secondary fs-6">le
-							{{ comment.createdAt |format_datetime('short', 'none', locale='fr') }}
-							à
-							{{ comment.createdAt |format_datetime('none', 'short', locale='fr') }}
-						</h3>
-						<p class="card-text">{{ comment.content }}</p>
-					</div>
-				</div>
-
-
-			{% endfor %}
-
-			{% if app.user %}
-				<div class="text-center">
-					<a href="{{ path('comment_add', {'slug': document.slug}) }}" class="btn btn-primary">
-						<i class="fa-duotone fa-comment-plus me-2"></i>
-						Ajouter un commentaire
-					</a>
-				</div>
-			{% endif %}
-
-		</div>
+		{% endif %}
 	</div>
 
 {% endblock %}
