Update user dashboard and navigation links

--- a/templates/user/dashboard.html.twig
+++ b/templates/user/dashboard.html.twig
@@ -83,7 +83,7 @@
 								Déposer mon premier commentaire
 							</a>
 						{% else %}
-							<a href="#" class="btn btn-sm btn-primary">
+							<a href="{{ path('user_documents_comments') }}" class="btn btn-sm btn-primary">
 								<i class="fa-duotone fa-clipboard-list me-2"></i>
 								Accéder à la liste
 							</a>
