--- a/templates/partials/_user-nav.html.twig
+++ b/templates/partials/_user-nav.html.twig
@@ -22,19 +22,18 @@
 
 				</li>
 				<li class="nav-item">
-					<a href="" class="nav-link">
-						<i class="fa-duotone fa-bookmark me-2"></i>Mes documents enregistrés</a>
+					<a href="{{ path('user_documents_favorites') }}" class="nav-link">
+						<i class="fa-duotone fa-bookmark me-2"></i>Mes documents favoris</a>
 
 				</li>
 				<li class="nav-item">
-					<a href="" class="nav-link">
+					<a href="{{ path('user_documents_uploads') }}" class="nav-link">
 						<i class="fa-duotone fa-share-from-square me-2"></i>Mes documents partagés</a>
 
 				</li>
 				<li class="nav-item">
-					<a href="" class="nav-link">
+					<a href="{{ path('user_documents_comments') }}" class="nav-link">
 						<i class="fa-duotone fa-comments me-2"></i>Mes interventions</a>
-
 				</li>
 			</ul>
 		</nav>
