--- a/templates/document/results.html.twig
+++ b/templates/document/results.html.twig
@@ -1,4 +1,4 @@
-{% for document in documents %}
+{# {% for document in documents %}
 	<div class="col document" data-rating="{{document.ratingAverage}}">
 		<div class="card">
 			<div class="card-header">
@@ -36,5 +36,11 @@
 				</div>
 			</div>
 		</div>
+	</div>
+{% endfor %} #}
+
+{% for document in documents %}
+	<div class="col document" data-rating="{{document.ratingAverage}}">
+		{% include 'partials/_document.html.twig' %}
 	</div>
 {% endfor %}
