--- a/templates/partials/_document.html.twig
+++ b/templates/partials/_document.html.twig
@@ -1,45 +1,5 @@
-{# <div class="col document" data-rating="{{document.ratingAverage}}">
-	<div class="card">
-		<div class="card-header">
-			<a href=" {{ path('document_search', {type: document.type.id } ) }}">{{ document.type.name }}</a>
-		</div>
-		<div class="card-body">
-			<div class="d-flex justify-content-between">
-				<div id="subjects" class="text-start">
-					{% for subject in document.subjects %}
-
-						<a href="{{ path('document_search', {subject: subject.id }) }}" class="badge text-bg-danger mx-1">{{ subject.name }}</a>
-					{% endfor %}
-				</div>
-				<div id="levels">
-					{% for level in document.levels %}
-						<a href="{{ path('document_search', {level: level.id }) }}" class="badge text-bg-success mx-1">{{ level.name }}</a>
-					{% endfor %}
-				</div>
-			</div>
-
-			<div class="content">
-				<div class="mx-auto text-center">
-					{% include 'partials/_rating.html.twig' %}
-					{{ document.ratingAverage }}
-				</div>
-				<h2 class="text-center">
-					<a href="{{ path('document_show', {'slug': document.slug}) }}">{{ document.title }}</a>
-				</h2>
-				<div class="mx-auto text-center">
-					proposé le
-					{{ document.uploadedAt | format_datetime('short', 'none', locale='fr') }}
-					par
-					<a href="{{ path('document_search', {'author': document.author.id}) }}">{{ document.author.username }}</a>
-				</div>
-			</div>
-		</div>
-	</div>
-</div> #}
-
-
-<div class="card" data-background-color="red">
-	<div class="card-body">
+<div class="card h-100">
+	<div class="card-body d-flex flex-column">
 		<div class="d-flex justify-content-between">
 			<h6 class="category-social">
 				<i class="fa fa-fire"></i>
@@ -59,7 +19,9 @@
 				</p>
 			{% endif %}
 		</div>
-		{% include 'partials/_rating.html.twig' %}
+		<div>
+			{% include 'partials/_rating.html.twig' %}
+		</div>
 		<h4 class="card-title">
 			<a href="{{ path('document_show', {'slug': document.slug}) }}">{{ document.title }}</a>
 		</h4>
@@ -77,7 +39,7 @@
 				{% endif %}
 			{% endfor %}
 		</p>
-		<div class="card-footer d-flex justify-content-between bg-white">
+		<div class="card-footer d-flex justify-content-between bg-white mt-auto">
 			<div class="author">
 				<img src="assets/img/julie.jpg" alt="" class="avatar img-raised">
 				<span>{{ document.author.username }}</span>
