--- a/templates/comment/handle.html.twig
+++ b/templates/comment/handle.html.twig
@@ -17,7 +17,7 @@
 			<div id="{{ field_name(form.rating) }}" class="d-flex justify-content-center">
 				{% for value in field_choices(form.rating) %}
 					<div class="form-check">
-						<input type="radio" id="rating_{{ loop.index0 }}" name="rating" class="form-check-input d-none" value="{{ value }}" {% if value == field_value(form.rating) %} checked {% endif %}>
+						<input type="radio" id="rating_{{ loop.index0 }}" name="{{ field_name(form.rating) }}" class="form-check-input d-none" value="{{ value }}" {% if value == field_value(form.rating) %} checked {% endif %}>
 						<label class="form-check-label" for="rating_{{ loop.index0 }}" data-rating="{{ value }}">
 							<i class="far fa-star rating-filter"></i>
 						</label>
