--- a/templates/document/show.html.twig
+++ b/templates/document/show.html.twig
@@ -12,6 +12,7 @@
 					<iframe src="{{ asset('uploads/documents/' ~ document.file) }}#toolbar=0" width="100%" height="700px">
 						<p>Insert your error message here, if the PDF cannot be displayed.</p>
 					</iframe>
+					// passer par une route qui renvoie le fichier avec entête particulière pour dire de ne pas télécharger le document
 				</object>
 
 				{# <embed src="{{ asset('uploads/documents/' ~ document.file) }}" type="application/pdf" width="100%" height="700px"> #}
