Update home.html.twig, Subject.php, SubjectController.php, Version20240421165511.php, and DocumentController.php files

--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -47,8 +47,9 @@
 		</div>
 	</div>
 
-	{% include('/partials/_marquee-icons.html.twig') %}
+	{# {% include('/partials/_marquee-icons.html.twig') %} #}
 
+	{{ render(controller('App\\Controller\\SubjectController::allSubjectsAction')) }}
 
 	<div class="feature">
 		<div class="feature-text feature-even">
