--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -68,7 +68,9 @@
 		</div>
 	</div>
 
-	{% include('/partials/_marquee-icons.html.twig') %}
+	{# {% include('/partials/_marquee-icons.html.twig') %} #}
+
+	{{ render(controller('App\\Controller\\SubjectController::allSubjectsAction')) }}
 
 
 	<div class="feature">
